fixed too large map

--- a/src/utils/styles/components/_chapter1.scss
+++ b/src/utils/styles/components/_chapter1.scss
@@ -1,5 +1,6 @@
 .ChapterContainer1 {
     background-color: $appDarkColor;
+    margin-right: 0rem;
 }
 
 .Chart-Container {
@@ -8,8 +9,8 @@
     position: relative;
     top: 20px;
     right: 0px;
-    margin-left: 550px;
-    z-index: -10;
+    padding-left: 450px;
+    // z-index: -10;
 }
 
 .Description {
@@ -18,7 +19,7 @@
 
 .step {
     padding: 20px;
-    background-color: #B9B9B9;
+    background-color: #E0E0E0;
     color: #000;
     text-align: left;
     max-width: 33%;
